# skyrmion_sim

./: .gitignore  CMakeLists.txt  README.md  Skymrion-sim.ipynb  build.sh  ini_pos.ipynb  wget-log
include/: forces.h  integrators.h  io.h  nvtx.h  params.h  precision.h  rng.h  simulation.h  state.h
inputs/: depinning_test.conf  euler.conf  example.conf  rk2.conf  test_npins.conf  test_npins_cells.conf  zero_force.conf
misc/: bench_pin_kernels.sh  extract_gpu_scaling.sh  make_video.py  performance.py  plot_gpu_scaling.py  plot_snap.py  plots.mplstyle  pseudo.txt
results/performance/: bench_scaling_false.txt  bench_scaling_true.txt
results/pin_scaling/: N1024_cll.nsys-rep  N1024_cll.qdstrm  N1024_cll.sqlite  N1024_naive.nsys-rep  N1024_naive.qdstrm  N1024_naive.sqlite  N16384_cll.nsys-rep  N16384_cll.qdstrm  N16384_cll.sqlite  N16384_naive.nsys-rep  N16384_naive.qdstrm  N16384_naive.sqlite  N2304_cll.nsys-rep  N2304_cll.qdstrm  N2304_cll.sqlite  N2304_naive.nsys-rep  N2304_naive.qdstrm  N2304_naive.sqlite  N256_cll.nsys-rep  N256_cll.qdstrm  N256_cll.sqlite  N256_naive.nsys-rep  N256_naive.qdstrm  N256_naive.sqlite  N36864_cll.nsys-rep  N36864_cll.qdstrm  N36864_cll.sqlite  N36864_naive.nsys-rep  N36864_naive.qdstrm  N36864_naive.sqlite  N4096_cll.nsys-rep  N4096_cll.qdstrm  N4096_cll.sqlite  N4096_naive.nsys-rep  N4096_naive.qdstrm  N4096_naive.sqlite  N576_cll.nsys-rep  N576_cll.qdstrm  N576_cll.sqlite  N576_naive.nsys-rep  (+16 more)
scripts/: bench_scaling.sh  plot_depinning.py  plot_step.py  run_sweep.sh
src/: forces.cu  integrators.cu  io.cpp  main.cu  params.cpp  rng.cu  simulation.cu
